Mobile view of "place in line" is fixed. Elements are no longer overlapping

--- a/client/src/app/components/student-session-view/student-session-view.component.scss
+++ b/client/src/app/components/student-session-view/student-session-view.component.scss
@@ -21,11 +21,7 @@ h1{
         background: lighten(DodgerBlue, 30%); }
 }
 
-.positionT{
-  margin-top: -60px;
+.rightSide{
+  float:right;
+  width: 290px;
 }
-
-.placeInLine{
-    position: relative;
-    width: 290px;
-  }
